--- a/JsGrid.UI/Views/Home/Index.cshtml
+++ b/JsGrid.UI/Views/Home/Index.cshtml
@@ -9,10 +9,27 @@
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                <tr>
+                    <th> Grid Name</th>
+                    <th> link</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th> jsGrid </th>
+                    <th> <a asp-controller="JsGrid" asp-action="Index"> jsGrid Page</a></th>
+                </tr>
+                <tr>
+                    <th> DataTables </th>
+                    <th> </th>
+                </tr>
+
+                </tbody>
             </table>
 
 
-            <button type="button" class="btn btn-primary"><i class="fas fa-plus"></i> Add Policy</button>
+            
         </div>
     </div>
 </div>
