Added Faker data generator. Added BuldCopy to SQL Server. Added List to DataTable extension method

--- a/JsGrid.UI/Views/JsGrid/Index.cshtml
+++ b/JsGrid.UI/Views/JsGrid/Index.cshtml
@@ -258,9 +258,13 @@
         });
 
 
-        $("#btnDownloadExcel").click(function () {
+        $("#btnDownloadExcel").click(function() {
 
-            window.open("../../api/track/generateExcel");
+            var parameters = {
+
+            };
+
+            window.open("https://localhost:44356/api/download/excel");
 
         });
 
