Employee Grid added with Grid filters

--- a/JsGrid.UI/Views/Home/Index.cshtml
+++ b/JsGrid.UI/Views/Home/Index.cshtml
@@ -21,6 +21,10 @@
                     <th> <a asp-controller="JsGrid" asp-action="Index"> jsGrid Page</a></th>
                 </tr>
                 <tr>
+                    <th> jsGrid </th>
+                    <th> <a asp-controller="JsGrid" asp-action="Employee"> Employee Grid Example</a></th>
+                </tr>
+                <tr>
                     <th> DataTables </th>
                     <th> </th>
                 </tr>
