--- a/JsGrid.UI/Views/JsGrid/Employee.cshtml
+++ b/JsGrid.UI/Views/JsGrid/Employee.cshtml
@@ -58,9 +58,9 @@
             pointer-events: auto !important;
         }
 
-            .jsgrid-pager-nav-inactive-button a {
-                color: #007bff !important;
-            }
+        .jsgrid-pager-nav-inactive-button a {
+            color: #007bff !important;
+        }
 
         .jsgrid-pager-page:hover, .jsgrid-pager-nav-button:hover {
             z-index: 2;
@@ -85,11 +85,11 @@
             border-color: #007bff;
         }
 
-            .jsgrid-pager-current-page:hover {
-                color: #fff;
-                background-color: #007bff;
-                border-color: #007bff;
-            }
+        .jsgrid-pager-current-page:hover {
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+        }
 
         .jsgrid-grid-header,
         .jsgrid-grid-body {
@@ -97,6 +97,10 @@
         }
 
 
+        .jsgrid input, .jsgrid select, .jsgrid textarea {
+            font-size: 1em;
+            border: 1px solid #cdcdcd;
+        }
 
 
         /* Grid dropdown style*/
@@ -113,10 +117,10 @@
         }
 
 
-        tr.highlight td.jsgrid-cell{
+        tr.highlight td.jsgrid-cell {
             background-color: #4CACD9;
             font-weight: bold;
-
+            font-size: 0.9em;
         }
 
 
@@ -126,15 +130,17 @@
             padding: .4rem 075rem !important;
             line-height: 1;
         }*/
-
-
-
+       
         .jsgrid-pager-current-page {
             color: #fff;
             background-color: #f35800;
             border-color: #f35800;
         }
 
+        /*Control Column width*/
+       .jsgrid-control-field{
+            width: 80px !important;
+        }
 
     </style>
 
